--- a/index.html
+++ b/index.html
@@ -4,31 +4,81 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto" />
     <link rel="stylesheet" href="styles.css" />
+
     <title>Hero text</title>
   </head>
   <body>
     <div class="first-section">
-      <div class="top-main">
-        <div class="header">
-          <div class="logo">Header Logo</div>
-          <ul>
-            <li class="links">header link one</li>
-            <li class="links">header link two</li>
-            <li class="links">header link three</li>
-          </ul>
+      <div class="header">
+        <div class="logo">Header Logo</div>
+        <ul>
+          <li class="links">header link one</li>
+          <li class="links">header link two</li>
+          <li class="links">header link three</li>
+        </ul>
+      </div>
+      <div class="container-top">
+        <div class="top-left">
+          <div class="title">This website is awesome</div>
+          <div class="subtext-title">
+            This website has some subtext that goes here under the main title. It's a smaller font and the color is
+            lower contrast
+          </div>
+          <button class="signup">Sign up</button>
+        </div>
+        <div class="top-right">
+          <img
+            class="top-img"
+            src="https://images.pexels.com/photos/160846/french-bulldog-summer-smile-joy-160846.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+            alt="image"
+          />
         </div>
       </div>
-      <div class="top-left">
-        <div class="title">This website is awesome</div>
-        <div class="subtext-title">
-          This website has some subtext that goes here under the main title. It's a smaller font and the color is lower
-          contrast
-        </div>
-        <button>Sign up</button>
-      </div>
-      <div class="top-right"><img src="" alt="image" /> this is a placeholder for an image</div>
     </div>
-    <div class="second-section"></div>
+    <div class="second-section">
+      <div class="second-title">Some random information.</div>
+      <div class="container-img">
+        <div class="img-info">
+          <img
+            src="https://images.pexels.com/photos/1458916/pexels-photo-1458916.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+            alt=""
+          />
+          <div class="img-subtext">This is some subtext under an illustration of image</div>
+        </div>
+        <div class="img-info">
+          <img
+            src="https://images.pexels.com/photos/59965/dog-young-dog-puppy-59965.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+            alt=""
+          />
+          <div class="img-subtext">This is some subtext under an illustration of image</div>
+        </div>
+        <div class="img-info">
+          <img
+            src="https://images.pexels.com/photos/485294/pexels-photo-485294.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+            alt=""
+          />
+          <div class="img-subtext">This is some subtext under an illustration of image</div>
+        </div>
+        <div class="img-info">
+          <img
+            src="https://images.pexels.com/photos/33053/dog-young-dog-small-dog-maltese.jpg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+            alt=""
+          />
+          <div class="img-subtext">This is some subtext under an illustration of image</div>
+        </div>
+      </div>
+    </div>
+    <div class="third-section">
+      <div class="quote-body">
+        This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people
+        will actually read it. Who knows? All I know is that it looks nice
+      </div>
+      <div class="author">-Thor, God of Tinder</div>
+    </div>
   </body>
 </html>
