--- a/index.html
+++ b/index.html
@@ -80,5 +80,15 @@
       </div>
       <div class="author">-Thor, God of Tinder</div>
     </div>
+    <div class="fourth-section">
+      <div class="blue-block">
+        <div class="text-block">
+          <div class="call-to-action">Call to action! It's time!</div>
+          Sign up for our product by clicking that button right over there!
+        </div>
+        <button class="signup-bottom">Sign up</button>
+      </div>
+    </div>
+    <div class="footer">Copiright &copy; The Odin Project 2023</div>
   </body>
 </html>
